Fix mobile logo text overflow

--- a/style.css
+++ b/style.css
@@ -1919,7 +1919,7 @@ ul {
     }
     
     .logo-container .text-logo-jm {
-        font-size: 0.9rem;
+        font-size: 0.75rem;
         white-space: nowrap;
     }
     
